Update script to use user_jvm_args.txt